--- a/deploy.yml
+++ b/deploy.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: veer2/test8
+        image: alokaz/app1
         ports:
         - containerPort: 80
